<resources>
    <string name="app_name">Beam</string>
    <string name="beam">Beam</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="start">Let\'s Go!</string>
    <string name="slide_1_title">Welcome</string>
    <string name="slide_2_title">Box Office Updates</string>
    <string name="slide_1_desc"><![CDATA[The easiest way to get access to Movies, Tv Series & Theaters!]]></string>
    <string name="slide_2_desc">Get the best upcoming and in-cinema movies updates!</string>
    <string name="slide_3_title">Save Favourites</string>
    <string name="slide_3_desc">Add your favourite movies and series by clicking the favourite icon!</string>
    <string name="slide_4_title">Television Series</string>
    <string name="slide_4_desc">Access to over 50 thousand series you love!</string>
    <string name="slide_5_title">Movie Tickets</string>
    <string name="slide_5_desc">Purchase movie tickets for your family and friends!</string>
    <string name="plot_synopsis">Plot Synopsis</string>
    <string name="cast">Cast</string>
    <string name="reviews">Reviews</string>
    <string name="trailer">Trailer</string>
    <string name="video">Video Player</string>
    <string name="ticket">Movie Tickets</string>
    <string name="favourite">Favourites</string>
    <string name="settings">Settings</string>
    <string name="watchlist">Watch List</string>
    <string name="title_activity_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general">General Settings</string>
    <string name="about_app">About</string>
    <string name="about">This is a movies update app designed for research purposes by Omawumi Eyekpimi [LeBelleAmi]. All rights reserved.</string>
    <string name="tittle_version">Version</string>
    <string name="version">App Version 1.0</string>
    <string name="powered">API Powered By</string>
    <string name="tmdb">The Movie Database</string>
    <string name="tmdb_link">https://themoviedb.org/</string>
    <string name="legal">Legal</string>
    <string name="legal_notice">Libraries</string>
    <string name="privacy">Privacy Policy</string>
    <string name="terms">Terms Of Use</string>
    <string name="help_center">Help Center</string>
    <string name="help">Help</string>
    <string name="feedback">FeedBack</string>
    <string name="account">Account</string>
    <string name="account_seetings">Account Settings</string>
    <string name="player_quality">Video Quality</string>
    <string name="player">Player</string>
    <string name="movie_notification">Notification</string>
    <string name="notify">notify</string>
    <string name="notify_summary"><![CDATA[Notify me about new movies & series]]></string>
    <string name="one">Standard Resolution</string>
    <string name="two">480p</string>
    <string name="three">720p HD</string>
    <string name="four">1080p HD</string>
    <string name="resolution">update_resolution</string>
    <string name="email_link">mailto:omawumi@lebelleami.com</string>
    <string name="title_privacy">Privacy Policy</string>
    <string name="title_terms">Terms Of Use</string>
    <string name="season">Seasons</string>
    <string name="addwatch">Add To Watchlist</string>
    <string name="empty_state">There are no movies to display, please refresh or check your network.</string>
</resources>
