<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/movie_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        tools:text="Aquaman" />

    <TextView
        android:id="@+id/movie_year1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceMedium"
        tools:text="December 7, 2018" />

    <TextView
        android:id="@+id/movie_rating1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_star_rating"
        android:drawableStart="@drawable/ic_star_rating"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="end"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceMedium"
        tools:text="6.7/10" />


    <TextView
        android:id="@+id/movie_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_reviews_24dp"
        android:drawableStart="@drawable/ic_reviews_24dp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="end"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceMedium"
        tools:text="6000 Reviews" />

    <TextView
        android:id="@+id/original_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_language_24dp"
        android:drawableStart="@drawable/ic_language_24dp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="end"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceMedium"
        tools:text="English" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_live_tv"
        android:drawableStart="@drawable/ic_live_tv"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="end"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceMedium"
        tools:text="Comedy" />

    <TextView
        android:id="@+id/rated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_security"
        android:drawableStart="@drawable/ic_security"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="end"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="G-General"
        android:visibility="gone"/>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackgroundTwo">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plot_synopsis"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorBackgroundTwo">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trailer"
                    android:background="@color/colorBackgroundTwo"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="24dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <LinearLayout
                    style="@style/Widget.CardContentTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/trailer_list_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:scrollbarSize="3dp"
                        android:scrollbarStyle="insideOverlay"
                        android:scrollbars="horizontal"
                        tools:listitem="@layout/trailer_list_item" />
                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackgroundTwo">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/reviews_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:scrollbarSize="3dp"
                    android:scrollbarStyle="insideOverlay"
                    android:scrollbars="vertical"
                    tools:listitem="@layout/review_list_item"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorBackgroundTwo">

            <TextView
                android:id="@+id/cast_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cast"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <LinearLayout
            style="@style/Widget.CardContentTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/cast_list_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:scrollbarSize="3dp"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="horizontal"
                tools:listitem="@layout/cast_list_item"/>
        </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/watchlist_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/addwatch" />

    </LinearLayout>

