<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fabFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/layoutFabVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="120dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/holo_orange_light"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/cvtSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/cardview_vertical_padding"
                    android:paddingLeft="@dimen/cardview_horizontal_padding"
                    android:paddingRight="@dimen/cardview_horizontal_padding"
                    android:paddingTop="@dimen/cardview_vertical_padding"
                    android:text="@string/video"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_video"
                app:backgroundTint="@color/purple_dark"
                app:fabSize="mini" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFabTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="170dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/holo_orange_light"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/cvtEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/cardview_vertical_padding"
                    android:paddingLeft="@dimen/cardview_horizontal_padding"
                    android:paddingRight="@dimen/cardview_horizontal_padding"
                    android:paddingTop="@dimen/cardview_vertical_padding"
                    android:text="@string/ticket"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabTicket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ticket"
                app:backgroundTint="@color/purple_light"
                app:fabSize="mini" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFabFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="220dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/holo_orange_light"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/cvtPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/cardview_vertical_padding"
                    android:paddingLeft="@dimen/cardview_horizontal_padding"
                    android:paddingRight="@dimen/cardview_horizontal_padding"
                    android:paddingTop="@dimen/cardview_vertical_padding"
                    android:text="@string/favourite"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite"
                app:backgroundTint="@android:color/holo_purple"
                app:fabSize="mini" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFabWatchlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="270dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/holo_orange_light"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/watchlisttext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/cardview_vertical_padding"
                    android:paddingLeft="@dimen/cardview_horizontal_padding"
                    android:paddingRight="@dimen/cardview_horizontal_padding"
                    android:paddingTop="@dimen/cardview_vertical_padding"
                    android:text="@string/watchlist"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabWatchlistIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bookmark"
                app:backgroundTint="@color/purple_final"
                app:fabSize="mini" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutFabSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="320dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/holo_orange_light"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/settingstext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/cardview_vertical_padding"
                    android:paddingLeft="@dimen/cardview_horizontal_padding"
                    android:paddingRight="@dimen/cardview_horizontal_padding"
                    android:paddingTop="@dimen/cardview_vertical_padding"
                    android:text="@string/settings"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabSettingIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings"
                app:backgroundTint="@color/purple_finaloone"
                app:fabSize="mini" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutFabMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:src="@drawable/ic_close"
                app:backgroundTint="?attr/colorAccent"
                app:fabSize="normal" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>
